# PlotNeuralNetworksMCP

./: .gitignore  README.md  REFACTOR_HANDOFF.md  REFACTOR_PLAN.md  pyproject.toml
examples/: generate_all.py  modernbert.py  modernbert_dsl.py
examples/output/: modernbert.tex
src/plot_nn_mcp/: __init__.py  compiler.py  dsl.py  flat_renderer.py  ir.py  lowering.py  presets.py  registry.py  render.py  server.py  themes.py
src/plot_nn_mcp/layers/: PartitionedBox.sty  init.tex
src/plot_nn_mcp/pycore/: __init__.py  blocks.py  blocks_transformer.py  tikzeng.py
tests/: conftest.py  test_dsl.py  test_e2e.py  test_golden.py  test_ir.py  test_ir_path_fixes.py  test_lowering.py  test_new_architectures.py  test_render.py  test_server.py
tests/golden/: 01_lstm_ner.tex  02_gru_translation.tex  03_seq2seq_attention.tex  04_bert_base.tex  05_roberta_base.tex  06_deberta_v3.tex  07_modernbert.tex  08_gpt2.tex  09_llama2_7b.tex  10_mistral_7b.tex  11_mixtral_8x7b.tex  12_dcgan.tex  13_stylegan2.tex  14_ddpm.tex  15_dit.tex  16_resnet50.tex  17_efficientnet_b0.tex  18_vit_b16.tex  19_yolov8.tex  20_pinn_raissi.tex  21_deeponet.tex  22_pinn_hard.tex  23_fno_2d.tex  24_uno.tex  25_swin_t.tex
